--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.50",
     "@sveltejs/kit": "next",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0"
   },
-  "type": "module",
-  "dependencies": {
-    "@sveltejs/adapter-netlify": "^1.0.0-next.50"
-  }
+  "type": "module"
 }
